--- a/web-projects/homepage/index.html
+++ b/web-projects/homepage/index.html
@@ -14,7 +14,7 @@
             </nav>
         </header>
         <main>
-            <h1>Gloira Lau | WDD 130</h1>
+            <h1>Gloria Lau | WDD 130</h1>
             <img src="images/profile.jpg" alt="Gloria Lau" width="200">
             <p>Hello! My name is Gloria Lau and I am from Hong Kong. I live in Orem, Utah with my own family. I am a mother of 3 young kids. I love music and playing the piano. I am a little slow in learning the programming things, but I will try my very best. Recently, I read a quote "If you are trying, you are not stagnant." by Michelle D. Graig. I know that "He loves when we try to do something hard, because we turn to Him. He loves you, He loves to help and strengthen us."
             </p>
