--- a/week02/wireframe.html
+++ b/week02/wireframe.html
@@ -37,7 +37,7 @@
             </div>
             <div id="product-gallery">
                 <section class="product">
-                    <img src="https://static.wixstatic.com/media/96f8a8_a3db90f260a34e4c8dc5bd5b27d0ff72~mv2.jpg/v1/fill/w_480,h_234,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/96f8a8_a3db90f260a34e4c8dc5bd5b27d0ff72~mv2.jpg" alt="belly binding cloth">
+                    <img src="https://static.wixstatic.com/media/96f8a8_a3db90f260a34e4c8dc5bd5b27d0ff72~mv2.jpg/v1/fill/w_480,h_234,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/96f8a8_a3db90f260a34e4c8dc5bd5b27d0ff72~mv2.jpg/250/250" alt="belly binding cloth">
                     <h2>product 1 Title</h2>
                     <p>product 1 description</p>
                 </section>
