--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Gloria Lau | WDD 130</title>
+        <meta name="description" content="Gloria Lau's BYU-Idaho WDD130 Homepage">
+        <meta name="author" content="Gloria Lau">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -20,6 +22,11 @@
             <p>Hello! My name is Gloria Lau and I am from Hong Kong. I live in Orem, Utah. I am a mother of 3 young kids. I love music and playing the piano. Recently, I read a quote "If you are trying, you are not stagnant." by Michelle D. Graig. I know that "He loves when we try to do something hard, because we turn to Him. He loves you, He loves to help and strengthen us."
             </p>
         </main>
+        <aside>
+            <h2>Utah</h2>
+            <img src="images/Utah.jpg" alt="Utah arches">
+            <p>The state is known for its skiing, with the mountains near Salt Lake City collecting abundant snowfall, as well as for the Sundance Film Festival, one of the world's premiere independent film festivals, staged each January in Park City.</p>
+        </aside>
         <footer>
             <p>©2024 ✨ Gloria Lau ✨ Orem, Utah</p>
         </footer>
