updated home page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="http://linkedin.com">Linkedin</a>
+                <a href="https://www.facebook.com/gloria.lau.908/">Facebook page</a>
             </nav>
         </header>
         <main>
@@ -21,8 +23,13 @@
             <img src="images/profile.jpg" alt="Hello, my  name is Gloria Lau" width="200">
             <p>Hello! My name is Gloria Lau and I am from Hong Kong. I live in Orem, Utah. I am a mother of 3 young kids. I love music and playing the piano. Recently, I read a quote "If you are trying, you are not stagnant." by Michelle D. Graig. I know that "He loves when we try to do something hard, because we turn to Him. He loves you, He loves to help and strengthen us."
             </p>
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/hong-kong-china-temple?lang=eng" target="_blank">Hong Kong Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/taipei-taiwan-temple?lang=eng" target="_blank">Taipei Taiwan Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Utah</h2>
             <img src="images/Utah.jpg" alt="Utah arches">
             <p>The state is known for its skiing, with the mountains near Salt Lake City collecting abundant snowfall, as well as for the Sundance Film Festival, one of the world's premiere independent film festivals, staged each January in Park City.</p>
@@ -31,4 +38,5 @@
             <p>©2024 ✨ Gloria Lau ✨ Orem, Utah</p>
         </footer>
     </body>
+    <!--last modified date: 1/27/2024-->
 </html>
