--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="description" content="About Us">
+    <meta name="author" content="Gloria Lau">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
