--- a/wwr/about.html
+++ b/wwr/about.html
@@ -41,7 +41,7 @@
         </section>
     </main>
     <footer>
-        <p>©2024 ✨ Rafting Site Document ✨ Gloira Lau</p>
+        <p>©2024 ✨ Splash White Water Rafting ✨ Gloria Lau</p>
         <nav>
             <a href="https://facebook.com">
                 <img src="images/facebook.png" alt="Facebook">
