--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Rafting Site Logo">
+        <img class="logo" src="images/logo.png" alt="Rafting Site Logo">
         <nav>
             <a class="box" href="index.html">Home</a>
             <a class="box" href="about.html">About Us</a>
@@ -24,20 +24,37 @@
             <h1>SPLASH WHITE WATER RAFTING</h1>
             <article>
                 <img id="happy-client" src="images/happy_client.jpg" alt="Happy Client">
-                <p>(company purpose, mission, creed, motto)</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt corporis libero quis officia, possimus nobis, obcaecati quod nulla aperiam fugit provident voluptatum! Nulla veritatis id qui totam. Laudantium, nobis rem?</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>(a brief history of the company)</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque laborum dignissimos molestias ad modi. Pariatur laboriosam odit eligendi suscipit nisi, possimus porro ullam ducimus quis unde aspernatur! Illum, sed ipsum.</p>
+            <img class="history-img" src="images/history.jpg" alt="Upper Provo River Utah">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil at, a error est provident eaque doloremque, magni dicta asperiores modi repudiandae fugit ipsa aliquid autem reprehenderit maiores veritatis cum saepe.</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/adventure1.jpg" alt="Group of People Rafting Image1">
-            <img src="images/adventure2.jpg" alt="Group of People Rafting Image2">
-            <img src="images/adventure3.jpg" alt="Group of People Rafting Image3">
-            <img src="images/adventure4.jpg" alt="Group of People Rafting Image4">
-            <img src="images/adventure5.jpg" alt="Group of People Rafting Image5">
+            <figure>
+                <img src="images/adventure1.jpg" alt="Group of People Rafting Image1">
+                <figcaption>Carry On</figcaption>
+            </figure>
+            <figure>
+                <img src="images/adventure2.jpg" alt="Group of People Rafting Image2">
+                <figcaption>Going through the S River</figcaption>
+            </figure>
+            <figure>   
+                <img src="images/adventure3.jpg" alt="Group of People Rafting Image3">
+                <figcaption>Teams up competition</figcaption>
+            </figure>
+            <figure>
+                <img src="images/adventure4.jpg" alt="Group of People Rafting Image4">
+                <figcaption>Beyond the mountains</figcaption>
+            </figure>
+            <figure>
+                <img src="images/adventure5.jpg" alt="Group of People Rafting Image5">
+                <figcaption>Excitment down the rocks</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
