--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Splash White Water Rafting-About Us</title>
     <meta name="description" content="About Us">
     <meta name="author" content="Gloria Lau">
     <link rel="stylesheet" href="styles/rafting.css">
