--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Splash White Water Rafting-About Us</title>
-    <meta name="description" content="About Us">
+    <meta name="description" content="Company Purpose and History">
     <meta name="author" content="Gloria Lau">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
