--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
             <label for="q2">2. How are id and class attributes selected in CSS?</label><br>
             <textarea name="q2" id="q2" cols="30" rows="5"></textarea><br>
             <label for="q3">3. Which of the following is a valid CSS comments?</label><br>
-            <select id="q3" name="q3"><br>
+            <select id="q3" name="q3">
                 <option value="" selected disabled>Choose One...</option>
                 <option value="/**/">/**/</option>
                 <option value="ctrl+/">ctrl+/</option>
