--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -22,13 +22,13 @@
         <section class="contactus">
             <div class="contact location">
                 <img src="images/location.jpg" alt="location">
-                <h2>ADDRESS</h2>
+                <h2>Address</h2>
                 <p>2487 e Provo Canyon Rd, <br>Provo. UT 84604</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d4301.636948411477!2d-111.63817047951974!3d40.32644552995208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sprovo%20canyon!5e0!3m2!1sen!2sus!4v1707630700045!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="contact phone">
                 <img src="images/phone-number.jpg" alt="phone number">
-                <h2>Phone Number</h2>
+                <h2>Phone number</h2>
                 <p>(801) 123-4567</p>
             </div>
             <div class="contact email">
@@ -37,8 +37,8 @@
                 <a href="mailto:ldwaiwailau@gmail.com">ldswaiwailau@gmail.com</a>
             </div>
             <div class="here">
-                <h2>WE ARE HERE FOR YOU!</h2>
-                <h2>CONTACT US</h2>
+                <h1>WE ARE HERE FOR YOU!</h1>
+                <h1>CONTACT US</h1>
             </div>
         </section>
         <section class="submit">
